small bug with overflow

--- a/yo-gurt/src/App.css
+++ b/yo-gurt/src/App.css
@@ -6,3 +6,9 @@
     font-style: normal;
   }
   
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100vw;  /* ensures viewport width */
+}
